--- a/resources/language/French (Canada)/strings.xml
+++ b/resources/language/French (Canada)/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
-<!-- Chinese (Simple) language-Team URL: http://www.transifex.com/projects/p/xbmc-addons/language/zh/ -->
+<!-- French (Canada) language-Team URL: http://www.transifex.com/projects/p/xbmc-addons/language/fr_CA/ -->
 <!-- Report language file syntax bugs at: alanwww1@xbmc.org -->
 
 <strings>
     <!-- Default strings -->
-    <string id="30001">页</string>
+    <string id="30001">Page</string>
 
     <!-- Settings -->
-    <string id="30100">视图模式强制为“缩略图”</string>
+    <string id="30100">Forcer le mode de visualisation en imagette</string>
 </strings>
